# deepstream_study

deepstream-gst_metadata/: CMakeLists.txt  dsmeta_pgie_config.txt  main.cpp
deepstream-interpipe/: CMakeLists.txt  deepstream_interpipe.cpp  dstest1_pgie_config.txt
deepstream-test1/: CMakeLists.txt  deepstream_test1.cpp
deepstream-test2/: CMakeLists.txt  deepstream_test2.cpp  dstest2_pgie_config.txt  dstest2_sgie1_config.txt  dstest2_sgie2_config.txt  dstest2_sgie3_config.txt
